--- a/_product.ui
+++ b/_product.ui
@@ -45,7 +45,7 @@
          <item row="2" column="1">
           <widget class="QPushButton" name="btnSaveCategory">
            <property name="text">
-            <string>PushButton</string>
+            <string>Add Category</string>
            </property>
           </widget>
          </item>
