--- a/_product.ui
+++ b/_product.ui
@@ -174,7 +174,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QTableWidget" name="tableWidget"/>
+        <widget class="QTableWidget" name="tableProducts"/>
        </item>
       </layout>
      </item>
