--- a/_product.ui
+++ b/_product.ui
@@ -91,24 +91,13 @@
      </item>
      <item row="0" column="4">
       <layout class="QGridLayout" name="saveEditLayout">
-       <item row="1" column="0">
-        <widget class="QLabel" name="label_2">
-         <property name="text">
-          <string>Brand</string>
-         </property>
-        </widget>
+       <item row="2" column="2">
+        <widget class="QLineEdit" name="leModel"/>
        </item>
        <item row="2" column="0">
         <widget class="QLabel" name="label_3">
          <property name="text">
           <string>Model</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="1" colspan="2">
-        <widget class="QLabel" name="label_6">
-         <property name="text">
-          <string>Save/Edit</string>
          </property>
         </widget>
        </item>
@@ -125,13 +114,24 @@
          </property>
         </spacer>
        </item>
-       <item row="2" column="2">
-        <widget class="QLineEdit" name="leModel"/>
-       </item>
-       <item row="3" column="0">
-        <widget class="QLabel" name="label_4">
+       <item row="1" column="2">
+        <widget class="QLineEdit" name="leBrand">
          <property name="text">
-          <string>Price</string>
+          <string/>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="label_2">
+         <property name="text">
+          <string>Brand</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1" colspan="2">
+        <widget class="QLabel" name="label_6">
+         <property name="text">
+          <string>Save/Edit</string>
          </property>
         </widget>
        </item>
@@ -142,25 +142,32 @@
          </property>
         </widget>
        </item>
-       <item row="3" column="2">
-        <widget class="QLineEdit" name="lePrice"/>
+       <item row="4" column="2">
+        <widget class="QComboBox" name="cBoxCategory"/>
        </item>
-       <item row="1" column="2">
-        <widget class="QLineEdit" name="leBrand">
+       <item row="3" column="0">
+        <widget class="QLabel" name="label_4">
          <property name="text">
-          <string/>
+          <string>Price</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="2">
+       <item row="7" column="2">
         <widget class="QPushButton" name="btnSave">
          <property name="text">
           <string>Save</string>
          </property>
         </widget>
        </item>
-       <item row="4" column="2">
-        <widget class="QComboBox" name="cBoxCategory"/>
+       <item row="3" column="2">
+        <widget class="QLineEdit" name="lePrice"/>
+       </item>
+       <item row="6" column="2">
+        <widget class="QPushButton" name="btnAdd">
+         <property name="text">
+          <string>Add</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </item>
